--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,47 @@
+# Dependencies
 node_modules
-.next
-.git
-.gitignore
-.env.local
-.env*.local
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# Next.js build output
+.next
+out
+dist
+
+# Environment files (except .env for build args)
+.env.local
+.env*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Git
+.git
+.gitignore
+.github
+
+# IDE
+.vscode
+.idea
+*.swp
+*.swo
+
+# OS
 .DS_Store
+Thumbs.db
+
+# Documentation
 README.md
+DEPLOY.md
+
+# Docker
+.dockerignore
+docker-compose.yml
+
+# CapRover
+captain-definition
+
+# Testing
+coverage
+.nyc_output
