Update email to contacto@vorluno.dev

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
 NEXT_PUBLIC_SITE_URL=https://vorluno.dev
-NEXT_PUBLIC_EMAIL=vorluno@gmail.com
+NEXT_PUBLIC_EMAIL=contacto@vorluno.dev
 NEXT_PUBLIC_GITHUB=https://github.com/vorluno
 NEXT_PUBLIC_LINKEDIN=https://linkedin.com/in/vorluno
